== 2.6.10 ==
Release date: March 3, 2022
* Enhancement: Team Member, Team Member Carousel - Added button style option for social links
* Enhancement: Team Member Carousel - Add links for Flickr, Tumblr, Github and Vimeo

== 2.6.9 ==
Release date: February 7, 2022
* Fixed: Posts - Arrows were appearing in Grid layout
* Fixed: Posts - JS error in pp-posts.js file

== 2.6.8 ==
Release date: February 3, 2022
* Added: Posts - Option to hide empty comments
* Fixed: Image Hotspots - JS error
* Fixed: Info List - Button was not showing on published page
* Fixed: Link Effects - Spelling mistake in effect setting
* Enhancement: Posts - Replaced slick slider with swiper slider
* Enhancement: Removed deprecated _register_controls function from all the widgets
* Set the minimum Elementor version required to 3.1.0

== 2.6.7 ==
Release date: January 27, 2022
* Added: Display Conditions - Request Parameter option
* Added: Team Member Carousel - Pause on hover option
* Fixed: Instagram Feed - Issue with token expiry
* Fixed: Core - PowerPack widgets category conflict with other plugins
* Fixed: Gravity Forms - Updated labels and field description selectors
* Enhancement: Content Reveal, Team Member Carousel - Added support for Inline font icons
* Enhancement: Content Reveal - Added logic to scroll page to top when Read Less button is clicked
* Enhancement: Twitter Grid, Twitter Timeline - Converted Tweet Limit text fields to number fields

== 2.6.6 ==
Release date: January 3, 2022
* Fixed: Scroll Image widget was not showing in the editor
* Fixed: Gravity Forms - Styles for multi step forms were not loading in the editor
* Fixed: PP prefix text overlapping with the search bar in the editor
* Enhancement: Instagram Feed - Removed custom access token option from widget settings

== 2.6.5 ==
Release date: December 21, 2021
* Fixed: PHP error on PowerPack settings page

== 2.6.4 ==
Release date: December 20, 2021