@@ -63,7 +63,7 @@ class Flipbox extends Powerpack_Widget {
 	/**
 	 * Get widget keywords.
 	 *
-	 * Retrieve the list of keywords the widget belongs to.
+	 * Retrieve the list of keywords the Flipbox widget belongs to.
 	 *
 	 * @access public
 	 *
@@ -120,17 +120,17 @@ class Flipbox extends Powerpack_Widget {
 		$this->start_controls_section(
 			'section_front',
 			[
-				'label'                 => esc_html__( 'Front', 'powerpack' ),
+				'label' => esc_html__( 'Front', 'powerpack' ),
 			]
 		);
 
 		$this->add_control(
 			'icon_type',
 			[
-				'label'                 => esc_html__( 'Icon Type', 'powerpack' ),
-				'type'                  => Controls_Manager::CHOOSE,
-				'label_block'           => false,
-				'options'               => [
+				'label'       => esc_html__( 'Icon Type', 'powerpack' ),
+				'type'        => Controls_Manager::CHOOSE,
+				'label_block' => false,
+				'options'     => [
 					'none'  => [
 						'title' => esc_html__( 'None', 'powerpack' ),
 						'icon'  => 'eicon-ban',
@@ -148,19 +148,22 @@ class Flipbox extends Powerpack_Widget {
 						'icon'  => 'eicon-font',
 					],
 				],
-				'default'               => 'icon',
+				'default'     => 'icon',
 			]
 		);
 
 		$this->add_control(
 			'icon_image',
 			[
-				'label'                 => esc_html__( 'Choose Image', 'powerpack' ),
-				'type'                  => Controls_Manager::MEDIA,
-				'default'               => [
+				'label'     => esc_html__( 'Choose Image', 'powerpack' ),
+				'type'      => Controls_Manager::MEDIA,
+				'dynamic'   => array(
+					'active' => true,
+				),
+				'default'   => [
 					'url' => Utils::get_placeholder_image_src(),
 				],
-				'condition'             => [
+				'condition' => [
 					'icon_type' => 'image',
 				],
 			]
@@ -169,15 +172,15 @@ class Flipbox extends Powerpack_Widget {
 		$this->add_control(
 			'select_icon',
 			[
-				'label'                 => __( 'Icon', 'powerpack' ),
-				'type'                  => Controls_Manager::ICONS,
-				'fa4compatibility'      => 'icon',
-				'default'               => [
-					'value'     => 'fas fa-star',
-					'library'   => 'fa-solid',
+				'label'            => __( 'Icon', 'powerpack' ),
+				'type'             => Controls_Manager::ICONS,
+				'fa4compatibility' => 'icon',
+				'default'          => [
+					'value'   => 'fas fa-star',
+					'library' => 'fa-solid',
 				],
-				'condition'             => [
-					'icon_type'     => 'icon',
+				'condition'        => [
+					'icon_type' => 'icon',
 				],
 			]
 		);
@@ -185,11 +188,11 @@ class Flipbox extends Powerpack_Widget {
 		$this->add_group_control(
 			Group_Control_Image_Size::get_type(),
 			[
-				'name'                  => 'thumbnail',
-				'default'               => 'full',
-				'condition'             => [
-					'icon_type'         => 'image',
-					'icon_image[url]!'  => '',
+				'name'      => 'thumbnail',
+				'default'   => 'full',
+				'condition' => [
+					'icon_type'        => 'image',
+					'icon_image[url]!' => '',
 				],
 			]
 		);
@@ -212,20 +215,26 @@ class Flipbox extends Powerpack_Widget {
 		$this->add_control(
 			'title_front',
 			[
-				'label'                 => esc_html__( 'Title', 'powerpack' ),
-				'type'                  => Controls_Manager::TEXT,
-				'label_block'           => true,
-				'default'               => esc_html__( 'This is the heading', 'powerpack' ),
-				'separator'             => 'before',
+				'label'       => esc_html__( 'Title', 'powerpack' ),
+				'type'        => Controls_Manager::TEXT,
+				'dynamic'     => array(
+					'active' => true,
+				),
+				'label_block' => true,
+				'default'     => esc_html__( 'This is the heading', 'powerpack' ),
+				'separator'   => 'before',
 			]
 		);
 		$this->add_control(
 			'description_front',
 			[
-				'label'                 => esc_html__( 'Description', 'powerpack' ),
-				'type'                  => Controls_Manager::TEXTAREA,
-				'label_block'           => true,
-				'default'               => __( 'This is the front content. Click edit button to change this text. Lorem ipsum dolor sit amet consectetur adipiscing elit dolor', 'powerpack' ),
+				'label'       => esc_html__( 'Description', 'powerpack' ),
+				'type'        => Controls_Manager::TEXTAREA,
+				'dynamic'     => array(
+					'active' => true,
+				),
+				'label_block' => true,
+				'default'     => __( 'This is the front content. Click edit button to change this text. Lorem ipsum dolor sit amet consectetur adipiscing elit dolor', 'powerpack' ),
 			]
 		);
 
@@ -259,17 +268,17 @@ class Flipbox extends Powerpack_Widget {
 		$this->start_controls_section(
 			'section_back',
 			[
-				'label'                 => esc_html__( 'Back', 'powerpack' ),
+				'label' => esc_html__( 'Back', 'powerpack' ),
 			]
 		);
 
 		$this->add_control(
 			'icon_type_back',
 			[
-				'label'                 => esc_html__( 'Icon Type', 'powerpack' ),
-				'type'                  => Controls_Manager::CHOOSE,
-				'label_block'           => false,
-				'options'               => [
+				'label'       => esc_html__( 'Icon Type', 'powerpack' ),
+				'type'        => Controls_Manager::CHOOSE,
+				'label_block' => false,
+				'options'     => [
 					'none'  => [
 						'title' => esc_html__( 'None', 'powerpack' ),
 						'icon'  => 'eicon-ban',
@@ -287,20 +296,23 @@ class Flipbox extends Powerpack_Widget {
 						'icon'  => 'eicon-font',
 					],
 				],
-				'default'               => 'icon',
+				'default'     => 'icon',
 			]
 		);
 
 		$this->add_control(
 			'icon_image_back',
 			[
-				'label'                 => esc_html__( 'Flipbox Image', 'powerpack' ),
-				'type'                  => Controls_Manager::MEDIA,
-				'default'               => [
+				'label'     => esc_html__( 'Flipbox Image', 'powerpack' ),
+				'type'      => Controls_Manager::MEDIA,
+				'dynamic'   => array(
+					'active' => true,
+				),
+				'default'   => [
 					'url' => Utils::get_placeholder_image_src(),
 				],
-				'condition'             => [
-					'icon_type_back'    => 'image',
+				'condition' => [
+					'icon_type_back' => 'image',
 				],
 			]
 		);
@@ -308,15 +320,15 @@ class Flipbox extends Powerpack_Widget {
 		$this->add_control(
 			'select_icon_back',
 			[
-				'label'                 => __( 'Icon', 'powerpack' ),
-				'type'                  => Controls_Manager::ICONS,
-				'fa4compatibility'      => 'icon_back',
-				'default'               => [
+				'label'            => __( 'Icon', 'powerpack' ),
+				'type'             => Controls_Manager::ICONS,
+				'fa4compatibility' => 'icon_back',
+				'default'          => [
 					'value'     => 'far fa-snowflake',
 					'library'   => 'fa-regular',
 				],
-				'condition'             => [
-					'icon_type_back'     => 'icon',
+				'condition'        => [
+					'icon_type_back' => 'icon',
 				],
 			]
 		);
@@ -324,9 +336,9 @@ class Flipbox extends Powerpack_Widget {
 		$this->add_group_control(
 			Group_Control_Image_Size::get_type(),
 			[
-				'name'                  => 'thumbnail_back',
-				'default'               => 'full',
-				'condition'             => [
+				'name'        => 'thumbnail_back',
+				'default'     => 'full',
+				'condition'   => [
 					'icon_type_back'        => 'image',
 					'icon_image_back[url]!' => '',
 				],
@@ -351,21 +363,27 @@ class Flipbox extends Powerpack_Widget {
 		$this->add_control(
 			'title_back',
 			[
-				'label'                 => esc_html__( 'Title', 'powerpack' ),
-				'type'                  => Controls_Manager::TEXT,
-				'label_block'           => true,
-				'default'               => esc_html__( 'This is the heading', 'powerpack' ),
-				'separator'             => 'before',
+				'label'       => esc_html__( 'Title', 'powerpack' ),
+				'type'        => Controls_Manager::TEXT,
+				'dynamic'     => array(
+					'active' => true,
+				),
+				'label_block' => true,
+				'default'     => esc_html__( 'This is the heading', 'powerpack' ),
+				'separator'   => 'before',
 			]
 		);
 
 		$this->add_control(
 			'description_back',
 			[
-				'label'                 => esc_html__( 'Description', 'powerpack' ),
-				'type'                  => Controls_Manager::TEXTAREA,
-				'label_block'           => true,
-				'default'               => __( 'This is the front content. Click edit button to change this text. Lorem ipsum dolor sit amet consectetur adipiscing elit dolor', 'powerpack' ),
+				'label'       => esc_html__( 'Description', 'powerpack' ),
+				'type'        => Controls_Manager::TEXTAREA,
+				'dynamic'     => array(
+					'active' => true,
+				),
+				'label_block' => true,
+				'default'     => __( 'This is the front content. Click edit button to change this text. Lorem ipsum dolor sit amet consectetur adipiscing elit dolor', 'powerpack' ),
 			]
 		);
 
@@ -1785,13 +1803,17 @@ class Flipbox extends Powerpack_Widget {
 
 					<?php if ( 'button' === $settings['link_type'] && ! empty( $settings['flipbox_button_text'] ) ) : ?>
 						<a <?php echo wp_kses_post( $this->get_render_attribute_string( 'button' ) ); ?>>
-							<?php if ( 'before' === $settings['button_icon_position'] ) : ?>
-								<?php $this->render_button_icon(); ?>
-							<?php endif; ?>
-							<?php echo esc_attr( $settings['flipbox_button_text'] ); ?>
-							<?php if ( 'after' === $settings['button_icon_position'] ) : ?>
-								<?php $this->render_button_icon(); ?>
-							<?php endif; ?>
+							<?php
+							if ( 'before' === $settings['button_icon_position'] ) :
+								$this->render_button_icon();
+							endif;
+
+							echo esc_attr( $settings['flipbox_button_text'] );
+
+							if ( 'after' === $settings['button_icon_position'] ) :
+								$this->render_button_icon();
+							endif;
+							?>
 						</a>
 					<?php endif; ?>
 				</div>
@@ -1886,7 +1908,7 @@ class Flipbox extends Powerpack_Widget {
 	 * @since 2.4.1
 	 * @access protected
 	 */
-	protected function content_template() { // phpcs:ignore PSR2.Methods.MethodDeclaration.Underscore
+	protected function content_template() {
 		?>
 		<#
 			view.addRenderAttribute( 'flipbox-card', {
