@@ -2,6 +2,7 @@
 Release date: March 3, 2022
 * Enhancement: Team Member, Team Member Carousel - Added button style option for social links
 * Enhancement: Team Member Carousel - Add links for Flickr, Tumblr, Github and Vimeo
+* Enhancement: Flip Box - Added dynamic tags support for title, description and icon image options
 
 == 2.6.9 ==
 Release date: February 7, 2022
